tests/baselines/reference/invalidAssignmentsToVoid.errors.txt
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(2,1): error TS2322: Type '1' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(3,1): error TS2322: Type '为真' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(4,1): error TS2322: Type '""' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(5,1): error TS2322: Type '{}' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(9,1): error TS2322: Type '类为 C' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(10,1): error TS2322: Type 'C' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(14,1): error TS2322: Type 'I' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(17,1): error TS2322: Type '类为 M' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(20,5): error TS2322: Type 'T' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts(22,1): error TS2322: Type '<T>(a: T) => 无值' is not assignable to type '无值'.


==== tests/cases/conformance/types/primitives/void/invalidAssignmentsToVoid.ts (10 errors) ====
    var x: void;
    x = 1;
    ~
!!! error TS2322: Type '1' is not assignable to type '无值'.
    x = true;
    ~
!!! error TS2322: Type '为真' is not assignable to type '无值'.
    x = '';
    ~
!!! error TS2322: Type '""' is not assignable to type '无值'.
    x = {}
    ~
!!! error TS2322: Type '{}' is not assignable to type '无值'.
    
    class C { foo: string; }
    var c: C;
    x = C;
    ~
!!! error TS2322: Type '类为 C' is not assignable to type '无值'.
    x = c;
    ~
!!! error TS2322: Type 'C' is not assignable to type '无值'.
    
    interface I { foo: string; }
    var i: I;
    x = i;
    ~
!!! error TS2322: Type 'I' is not assignable to type '无值'.
    
    module M { export var x = 1; }
    x = M;
    ~
!!! error TS2322: Type '类为 M' is not assignable to type '无值'.
    
    function f<T>(a: T) {
        x = a;
        ~
!!! error TS2322: Type 'T' is not assignable to type '无值'.
    }
    x = f;
    ~
!!! error TS2322: Type '<T>(a: T) => 无值' is not assignable to type '无值'.